# hackerrank-orchestrate-june26

./: .env.example  .gitignore  AGENTS.md  README.md  architecture.md  plan.md
code/: README.md  main.py  pyproject.toml  requirements.txt
code/evaluation/: __init__.py  evaluation_report.limit1-ollama.md  evaluation_report.md  experiments.json  experiments.limit1-ollama.json  main.py  metrics.json  metrics.limit1-ollama.json  metrics.py  perturbed_evaluation_report.md  perturbed_metrics.json  perturbed_predictions.csv  reporting.py  sample_claims.local_subset.csv  strategy_a_predictions.csv  strategy_b_predictions.csv  strategy_c_predictions.csv
code/evaluation/sample_intermediate/: claim_user_001.json  claim_user_002.json  claim_user_004.json
code/evaluation/stage2_local_intermediate/: claim_001_user_001.json  claim_user_001.json
code/evaluation/stage2_mock_intermediate/: claim_user_001.json  claim_user_002.json  claim_user_004.json
code/hackerrank_orchestrate_claims.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/src/: __init__.py  batch_runner.py  claim_processing.py  config.py  csv_io.py  history.py  image_io.py  prompting.py  requirements.py  runtime.py  schemas.py
code/src/models/: __init__.py  base.py  gemini_adapter.py  mock_adapter.py  ollama_adapter.py  openai_compatible_adapter.py
code/tests/: conftest.py  test_adjudication.py  test_batch_runner.py  test_claim_processing.py  test_claim_rules.py  test_config.py  test_evidence_intel.py  test_metrics.py  test_pipeline_smoke.py  test_prompting.py  test_schemas.py  test_telemetry.py
(+38 files in other folders)
